2008-2-15 Manfred Stienstra <manfred@fngtps.com>

	* lib/rucola/fsevents.rb,
	  test/test_dependencies.rb,
	  test/test_reloader.rb:

	- Made tests green.

2008-2-14 Manfred Stienstra <manfred@fngtps.com>

	* Rakefile:

	- Added rdoc task

2008-2-8 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  app_generators/rucola/rucola_generator.rb,
	  app_generators/rucola/templates/config/dependencies.rb,
	  lib/rucola/reloader.rb,
	  lib/rucola/tasks/main.rake,
	  test/test_rucola_generator.rb:

	- Added 'config/dependencies.rb' to the app generator.
	- Added a 'update' rake task, which will simply run the rucola generator again so you can add/update files that were added in a new version of Rucola.
	- Reloader will now also watch the model files and do a syntax check of the file before loading it and warn if loading a file would have caused a SyntaxError.

2008-2-2 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  TODO,
	  app_generators/rucola/rucola_generator.rb,
	  app_generators/rucola/templates/script/console,
	  lib/rucola/initializer.rb,
	  test/test_rucola_generator.rb:

	Added a script/console script which will run a irb console with the application loaded.
	From Jelle Helsen (http://www.hcode.be/wordpress/2008/01/29/simple-rucola-console-script/).

2008-2-2 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/dependencies.rb,
	  lib/rucola/tasks/dependencies.rake,
	  lib/rucola/tasks/main.rake,
	  test/test_dependencies.rb:

	- Added a "dependencies:copy" rake task, which copies he required files to 'vendor/third_party/'.
	  As with the "dependencies:list" task, the env var FILE_TYPES can be used to filter.
	- Some more refactoring.

2008-2-2 Eloy Duran <e.duran@superalloy.nl>

	* Manifest.txt,
	  TODO,
	  lib/rucola/dependencies.rb,
	  lib/rucola/tasks/dependencies.rake,
	  test/fixtures/dependencies/requires_fileutils.rb,
	  test/test_dependencies.rb:

	- Refactored a lot of dependencies code.